# Galaxies_Morpho_ML

./: .gitignore  LICENSE  ML.ipynb  Photos.ipynb  Photos_fixed.ipynb  Pixels_PCA.ipynb  README.md  code.ipynb  data_images_retrieval_astropy.py  machine_learning_classifier.py  pyproject.toml  sdss_clean_data_scirpt.py  simplified_script.py
docs/: Galaxies_Morpho_ML_doc.md  doc.md
src/: module.py
tests/: test_file.py  tests.md
